--- a/src/app/shop/catalog/cart/cart.component.html
+++ b/src/app/shop/catalog/cart/cart.component.html
@@ -42,17 +42,10 @@
 </div>
 </div>
 <hr>
-<div class="row">
-    <span class="pull-left" style="margin-left: 3rem; color:#7d7d7d; font-size: 12px;">Zwischen Summe </span>
-    <span style="color:#7d7d7d;" class="pull-right">{{totalSum}} €</span>
-</div>
-<div class="row" *ngIf="!orderCannotBeDelivered">
-    <span class="pull-left"   style="margin-left: 3rem;color:#7d7d7d;font-size: 12px;">Liferung Kosten </span>
-    <span class="pull-right" style="color:#7d7d7d;">2 €</span>
-</div>
+
 
 <div class="row">
-    <span class="pull-left" style="margin-left: 3rem;font-size: 15px;"><b>Gesamt </b></span>
+    <span class="pull-left" style="margin-left: 3rem;font-size: 15px;"><b>Summe </b></span>
     <span class="pull-right">{{OrderSum}}€</span>
 </div>
 <hr>
