--- a/src/app/shop/catalog/navbar/navbar.component.scss
+++ b/src/app/shop/catalog/navbar/navbar.component.scss
@@ -1,20 +1,4 @@
-
-li {
-    display: inline-block;
-    float: none;
-    font-family: "Times New Roman", Times, serif;
-    text-align: center;
-    font-size: 12px;
-    
-    
-}
-
-input {
-padding: 10px;
-font-size: 17px;
-margin-left:51px;
-margin-top:5px;
-background: #f1f1f1;
-width: 80%;
-
+.ul{
+font-family: Georgia, 'Times New Roman', Times, serif;
+text-align: center;
 }
