--- a/src/app/shop/catalog/navbar/navbar.component.html
+++ b/src/app/shop/catalog/navbar/navbar.component.html
@@ -1,31 +1,22 @@
-<div class="container-fluid">
-    <div class="row">
-        <div>
-            <a href="#" (click)="activateSearchElement()">
-                <span style="float:left;position:absolute;margin-left: 4ex;margin-top: 2ex;"
-                    class="glyphicon glyphicon-search"></span>
-            </a>
-        </div>
-        <div *ngIf="!isSearchBarActive">
-            <ul class="nav nav-tabs"   style="margin-left: 50px;">
-                <a  [routerLink]="[menuBarItemsInitView[0]]" (click)="onLeftClick()" *ngIf="isLeftClickEnabled"><span
-                        class="glyphicon glyphicon-chevron-left"></span></a>
-                <li role="presentation" *ngFor="let item of menuBarItemsInitView let i=index"><a  
-                   
-                     [routerLink]="[item]"
-                     routerLinkActive="active" 
-                     [routerLinkActiveOptions]="{exact:
-                        true}"
-                        style="color:gray">{{item}}</a></li>
-                <a [routerLink]="[menuBarItemsInitView[1]]" (click)="onRightClick()"   style="margin-left: 3em;" *ngIf="ifRightClickEnabled"><span
-                        class="glyphicon glyphicon-chevron-right"></span></a>
+
+
+<nav class="navbar navbar-default">
+    <div class="container-fluid">
+      <!-- Collect the nav links, forms, and other content for toggling -->
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav">
+          <li class="dropdown">
+            <a  class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"> Auswählen <span class="caret"></span></a>
+            <ul class="dropdown-menu">
+                <li   class="nav-item" role="presentation" *ngFor="let item of menuBarItemsAll let i=index"><a            
+                    [routerLink]="[item]"
+                    routerLinkActive="active" 
+                    [routerLinkActiveOptions]="{exact:
+                       true}"
+                       style="color:gray">{{item}}</a></li>
             </ul>
-        </div>
-        <div *ngIf="isSearchBarActive">
-            <input type="text" placeholder="Search.." name="search">
-            <a href="#" (click)="deactivateSearchBar()">
-                <span class="glyphicon glyphicon-remove"></span>
-              </a>
-        </div>
-    </div>
-</div>
+          </li>
+        </ul>
+      </div><!-- /.navbar-collapse -->
+    </div><!-- /.container-fluid -->
+  </nav>
