--- a/src/app/shop/shop.component.html
+++ b/src/app/shop/shop.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container-fluid" style="margin-left: 2em;">
   <div class="row">
     <div class="header">
       <app-header></app-header>
