--- a/src/app/shop/cart/cart.component.html
+++ b/src/app/shop/cart/cart.component.html
@@ -17,7 +17,7 @@
         <div class="row">
     <span >{{item.name}}</span></div>
         <div class="row">
-            <span style="font-family: 'Courier New', Courier, monospace;font-style: italic;">({{item.size}})</span>
+            <span style="font-family: 'Courier New', Courier, monospace;font-style: italic;">  getProductDescription()</span>
         </div>
     <div class="row">
         <span style="font-family: 'Courier New', Courier, monospace;font-style: italic;font-size: 12px;">{{getOderAdditionsText(i)}}</span></div>
