--- a/src/app/shop/meal/meal.component.html
+++ b/src/app/shop/meal/meal.component.html
@@ -1,4 +1,4 @@
-<div class="row" *ngFor="let product of itemsToDisplay;let i = index">
+<div id="maindiv" class="row" *ngFor="let product of itemsToDisplay;let i = index" style="padding-block: 2ex;">
     <div class="col-sm-6">
         <p style="font-weight: bold;font-size: 20px;">{{product.productName}}</p> <br>
         <p>{{product.productDescription}}</p><br>
